@@ -2,6 +2,8 @@ Flare v1.09 (WIP)
 
 Engine fixes:
 * Fixed shrinking tab widgets when widow was resized.
+* Remove broken 'font_fallback' from engine/font_settings.txt.
+* Add tooltips to language list to show language codes.
 
 Translation updates:
 
